<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/first_entry_view"
    tools:context="mrtsk.by.helpme.FirstEntry">

    <ProgressBar
        android:id="@+id/first_entry_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/first_entry_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/post_user_avatar"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_below="@+id/textInputLayout2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="95dp"
            android:src="@mipmap/human_avatar"
            app:civ_border_color="@android:color/black"
            app:civ_border_width="2dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="38dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edittext_user_name"
                android:inputType="textPersonName"
                android:textSize="18sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textInputLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/user_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edittext_user_age"
                android:inputType="number"
                android:textSize="18sp" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textInputLayout2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="49dp"
            android:text="@string/add_avatar"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/go_to_homepage"
            android:layout_width="109dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textInputLayout2"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="61dp"
            android:background="@drawable/round_button"
            android:text="@string/go_homepage_buttun_text"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/back_to_signIn_page"
            android:layout_width="109dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textInputLayout2"
            android:layout_alignTop="@+id/go_to_homepage"
            android:background="@drawable/round_button"
            android:text="@string/go_signIn_page_button_text"
            android:textAllCaps="false" />
    </RelativeLayout>


</RelativeLayout>
